@@ -59,8 +59,9 @@ Loop optimization passes. Enabled by @option{-loop}.
 @item OPTGROUP_INLINE
 Inlining passes. Enabled by @option{-inline}.
 
-@item OPTGROUP_OPENMP
-OpenMP passes. Enabled by @option{-openmp}.
+@item OPTGROUP_OMP
+OMP (Offloading and Multi Processing) passes. Enabled by
+@option{-omp}.
 
 @item OPTGROUP_VEC
 Vectorization passes. Enabled by @option{-vec}.
